load items from smarter balanced's website and parse them then convert them to pdf

--- a/HtmlToPdf/Properties/launchSettings.json
+++ b/HtmlToPdf/Properties/launchSettings.json
@@ -22,6 +22,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:25401"
+    },
+    "Kestrel": {
+      "commandName": "Project",
+      "launchUrl": "pdf",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
